media/css/DasStyle.css
/* ... */
@font-face {
  font-family: 'Raleway Local';
  src: url("/site_media/fonts/Raleway/raleway-mediumitalic-webfont.eot");
  src: url("/site_media/fonts/Raleway/raleway-mediumitalic-webfont.eot?#iefix") format("embedded-opentype"),
       url("/site_media/fonts/Raleway/raleway-mediumitalic-webfont.woff2") format("woff2"),
       url("/site_media/fonts/Raleway/raleway-mediumitalic-webfont.woff") format("woff"),
       url("/site_media/fonts/Raleway/raleway-mediumitalic-webfont.ttf") format("truetype"),
       url("/site_media/fonts/Raleway/raleway-mediumitalic-webfont.svg#RalewayBoldItalic") format("svg");
  font-weight: 500; font-style: italic;
}

@font-face {
  font-family: 'Raleway Local';
  src: url("/site_media/fonts/Raleway/raleway-italic-webfont.eot");
  src: url("/site_media/fonts/Raleway/raleway-italic-webfont.eot?#iefix") format("embedded-opentype"),
       url("/site_media/fonts/Raleway/raleway-italic-webfont.woff2") format("woff2"),
       url("/site_media/fonts/Raleway/raleway-italic-webfont.woff") format("woff"),
       url("/site_media/fonts/Raleway/raleway-italic-webfont.ttf") format("truetype"),
       url("/site_media/fonts/Raleway/raleway-italic-webfont.svg#RalewayItalic") format("svg");
  font-weight: normal; font-style: italic;
}

@font-face {
  font-family: 'Raleway Local';
  src: url("/site_media/fonts/Raleway/raleway-regular-webfont.eot");
  src: url("/site_media/fonts/Raleway/raleway-regular-webfont.eot?#iefix") format("embedded-opentype"),
       url("/site_media/fonts/Raleway/raleway-regular-webfont.woff2") format("woff2"),
       url("/site_media/fonts/Raleway/raleway-regular-webfont.woff") format("woff"),
       url("/site_media/fonts/Raleway/raleway-regular-webfont.ttf") format("truetype"),
       url("/site_media/fonts/Raleway/raleway-regular-webfont.svg#RalewayRegular") format("svg");
  font-weight: normal; font-style: normal;
}

*:not(.glyphicon) { font-family: "Raleway", "Raleway Local", Arial, sans-serif !important; }
body {
	margin: 50px 0 0 0 !important;
	padding: 50px 15px 30px 15px;
	-webkit-text-size-adjust: none;
	line-height: 1.42857143;
}

a { text-decoration: none; }
a:link,
a:visited,
a:active { color: #009B96 !important; }
a:hover { color: #333; }
a.nav-hover > div {
	box-sizing: content-box;
	border-bottom: 6px solid #fff;
}
a.nav-hover.active > div,
a.nav-hover:hover > div { border-bottom: 6px solid #009B96 !important; }
table { border-collapse: collapse; }
td { padding: 0; }
p { margin: 0 0 10px; }

.DASmain {
	position: relative;
	width: 975px; height: 1000px;
	margin-left: auto; margin-right: auto;
}
.DAShome { height: 600px !important; }
.DASresearch { height: 1450px !important; }
.DASresources { height: 950px !important; }
.DAScontact { height: 1100px !important; }


.TEXT {
	font-size: 14px; line-height: 19px;
	font-weight: normal; text-align: left;
	color: #555;
}
.homeTEXT {
	text-align: justify;
}
.peopleTEXT {
	line-height: 16px;
	color: #666;
}
.yearTEXT {
	font-size: 14px;
	font-weight: normal;
	color: #009B96;
}


.HEAD {
	font-size: 26px;
	color: #333;
}
.researchH2 {
	line-height: 31px;
	font-weight: normal;
}
.peopleH2 {
	font-size: 20px; line-height: 20px;
	font-weight: bold;
	color: #009B96;
}
.publicationsH1 { font-weight: normal; }
.publicationsH2 { font-weight: bold; }
table tbody tr td.year-top { border-top: 15px solid #fff; }
.yearH2 {
	font-size: 36px;
	color: #009B96;
}.contactH1 {
	font-size: 14px; line-height: 14px;
	font-weight: bold;
}
.contactH2 {
	font-size: 18px; line-height: 23px;
	font-weight: bold; text-decoration: none;
}
.contactH3 {
	font-size: 18px; line-height: 23px;
	font-weight: bold;
	color: #007E79;
}

.divisionLine { border-bottom: dotted thin #666; }
.fix { position: absolute;}


#dasLOGO {
	left: 6px; top: 1px;
	width: 156px; height: 83px;
	z-index: 1;
}
#DasNAV {
	left: 225px; top: 30px;
	width: 750px; height: 31px;
	z-index: 2;
}
#DasBANNER {
	left: 2px; top: 100px;
	width: 973px; height: 221px;
	z-index: 3;
}
#DasHEADER {
	left: 673px; top: 25px;
	width: 352px; height: 114px;
	z-index: 1;
}
#DasICON {
	display: inline;
	left: 128px; bottom: 0px;
	width: 729px; height: 54px;
	z-index: 5;
}
#DasFOOTER {
	display: inline;
	left: 57px; bottom: 55px;
	width: 855px; height: 53px;
	z-index: 9;
}
#DasCONTENT { opacity: 0; }


#homeTEXT {
	left: 212px; top: 519px;
	width: 436px; height: 110px;
	z-index: 8;
}
#researchBTN {
	left: -53px; top: 119px;
	width: 51px; height: 205px;
	z-index: 1;
}
#whatWeDo {
	left: 67px; top: 520px;
	width: 129px; height: 86px;
	z-index: 6;
}
#weStrive {
	left: 679px; top: 518px;
	width: 226px;height: 103px;
	z-index:7;
}
#ourGoal {
	left: 56px; top: 360px;
	width: 855px; height: 61px;
	z-index: 4;
}
#divisionBar {
	left: 56px; top: 459px;
	width: 855px; height: 38px;
	z-index: 4;
}


.BODY {
	position: absolute;
	left: 56px; top: 360px;
	width: 856px;
	z-index: 8;
}
.BODY-ERR {
	position: absolute;
	left: 72px; top: 100px;
	width: 856px;
	z-index: 8;
}

.imgsp_map {
	background: url("/site_media/images/public/img_contact_map.jpg") no-repeat;
	width: 541px;
	height: 264px;
	background-position: 0 0;
}
.imgsp_map:hover { background-position: 0 -266px; }
.imgsp_resources_1, .imgsp_resources_2 { background: url("/site_media/images/public/word_resources.png") no-repeat; }
.imgsp_resources_1 {
	background-position: 0 0;
	width: 164px;
	height: 67px;
}
.imgsp_resources_2 {
	background-position: 0 -67px;
	width: 164px;
	height: 44px;
}
.imgsp_more_info {
	background: url("/site_media/images/public/nav_more_info.png") no-repeat;
	width: 121px;
	height: 32px;
	background-position: 0 0;
}
.imgsp_more_info:hover { background-position: -122px 0; }
.imgsp_more_read {
	background: url("/site_media/images/public/nav_more_read.png") no-repeat;
	width: 121px;
	height: 32px;
	background-position: 0 0;
}
.imgsp_more_read:hover { background-position: -122px 0; }
.imgsp_research_1, .imgsp_research_2, .imgsp_research_3 { background: url("/site_media/images/public/word_research.png") no-repeat; }
/* ... */

